--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Furniture</title>
+    <title>Title</title>
 
     <link rel="stylesheet" href="style.css" />
   </head>
