--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Title</title>
+    <title>Furniture</title>
 
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -25,7 +25,78 @@
     <div class="content">
       <header class="header">
         <div class="container header__container">
-          <a class="header__logo" href="#">DudeShape</a>
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">DudeShape</a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-toggle="collapse"
+              data-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div
+              class="collapse navbar-collapse"
+              id="navbarSupportedContent"
+            >
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#"
+                    >Home <span class="sr-only">(current)</span></a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    id="navbarDropdown"
+                    role="button"
+                    data-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                  >
+                    Dropdown
+                  </a>
+                  <div
+                    class="dropdown-menu"
+                    aria-labelledby="navbarDropdown"
+                  >
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#"
+                      >Something else here</a
+                    >
+                  </div>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled" href="#">Disabled</a>
+                </li>
+              </ul>
+              <form class="form-inline my-2 my-lg-0">
+                <input
+                  class="form-control mr-sm-2"
+                  type="search"
+                  placeholder="Search"
+                  aria-label="Search"
+                />
+                <button
+                  class="btn btn-outline-success my-2 my-sm-0"
+                  type="submit"
+                >
+                  Search
+                </button>
+              </form>
+            </div>
+          </nav>
+          <!-- <a class="header__logo" href="#">DudeShape</a>
 
           <nav class="header__nav">
             <ul class="header__list">
@@ -51,13 +122,13 @@
               src="/img/menu 1.png"
               alt="brgr_menu"
             />
-          </div>
+          </div> -->
         </div>
       </header>
 
       <main class="main">
         <section class="hero">
-          <div class="container">
+          <div class="container hero__container">
             <div class="hero__wrapper">
               <div class="hero__picture-wrapper">
                 <img
