menu fixed and bug fix

--- a/index.html
+++ b/index.html
@@ -39,10 +39,7 @@
               <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div
-              class="collapse navbar-collapse"
-              id="navbarSupportedContent"
-            >
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                   <a class="nav-link" href="#"
@@ -64,16 +61,11 @@
                   >
                     Dropdown
                   </a>
-                  <div
-                    class="dropdown-menu"
-                    aria-labelledby="navbarDropdown"
-                  >
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">Action</a>
                     <a class="dropdown-item" href="#">Another action</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#"
-                      >Something else here</a
-                    >
+                    <a class="dropdown-item" href="#">Something else here</a>
                   </div>
                 </li>
                 <li class="nav-item">
@@ -84,7 +76,7 @@
                 <input
                   class="form-control mr-sm-2"
                   type="search"
-                  placeholder="Search"
+                  placeholder="Find smsng for u"
                   aria-label="Search"
                 />
                 <button
@@ -139,13 +131,10 @@
                 />
               </div>
               <div class="hero__cta">
-                <h1 class="hero__header">
-                  We Help You Make Modern Furniture
-                </h1>
+                <h1 class="hero__header">We Help You Make Modern Furniture</h1>
                 <p class="hero__paragraph">
-                  All of our furniture uses the best materials and choices
-                  for our customers.All of our furniture uses the best
-                  materials
+                  All of our furniture uses the best materials and choices for
+                  our customers.All of our furniture uses the best materials
                 </p>
                 <div class="hero__button-wrapper">
                   <a href="#" class="hero__button"> Explore More</a>
@@ -201,9 +190,8 @@
               <div class="slider__text">
                 <h1 class="slider__header">Our Popular Furniture</h1>
                 <p class="slider__paragraph">
-                  All of our furniture uses the best materials and choices
-                  for our customers.All of our furniture uses the best
-                  materials
+                  All of our furniture uses the best materials and choices for
+                  our customers.All of our furniture uses the best materials
                 </p>
               </div>
             </div>
@@ -239,9 +227,7 @@
                       />
                       <div class="furniture__wrapper">
                         <div class="furniture__describe">
-                          <h3 class="furniture__header_small">
-                            White Chair1
-                          </h3>
+                          <h3 class="furniture__header_small">White Chair1</h3>
                           <img
                             src="./img/Frame 41.png"
                             alt="furniture__favorite"
@@ -251,9 +237,7 @@
                         <div class="furniture__sell">
                           <h3 class="furniture__prise">40$</h3>
                           <div class="furniture__wrapper_sell">
-                            <a href="#" class="furniture__button"
-                              >Buy Now</a
-                            >
+                            <a href="#" class="furniture__button">Buy Now</a>
                           </div>
                         </div>
                       </div>
@@ -266,9 +250,7 @@
                       />
                       <div class="furniture__wrapper">
                         <div class="furniture__describe">
-                          <h3 class="furniture__header_small">
-                            White Chair2
-                          </h3>
+                          <h3 class="furniture__header_small">White Chair2</h3>
                           <img
                             src="./img/Frame 41.png"
                             alt="furniture__favorite"
@@ -278,9 +260,7 @@
                         <div class="furniture__sell">
                           <h3 class="furniture__prise">40$</h3>
                           <div class="furniture__wrapper_sell">
-                            <a href="#" class="furniture__button"
-                              >Buy Now</a
-                            >
+                            <a href="#" class="furniture__button">Buy Now</a>
                           </div>
                         </div>
                       </div>
@@ -293,9 +273,7 @@
                       />
                       <div class="furniture__wrapper">
                         <div class="furniture__describe">
-                          <h3 class="furniture__header_small">
-                            White Chair3
-                          </h3>
+                          <h3 class="furniture__header_small">White Chair3</h3>
                           <img
                             src="./img/Frame 41.png"
                             alt="furniture__favorite"
@@ -305,9 +283,7 @@
                         <div class="furniture__sell">
                           <h3 class="furniture__prise">40$</h3>
                           <div class="furniture__wrapper_sell">
-                            <a href="#" class="furniture__button"
-                              >Buy Now</a
-                            >
+                            <a href="#" class="furniture__button">Buy Now</a>
                           </div>
                         </div>
                       </div>
@@ -324,9 +300,7 @@
                       />
                       <div class="furniture__wrapper">
                         <div class="furniture__describe">
-                          <h3 class="furniture__header_small">
-                            White Chair1
-                          </h3>
+                          <h3 class="furniture__header_small">White Chair1</h3>
                           <img
                             src="./img/Frame 41.png"
                             alt="furniture__favorite"
@@ -336,9 +310,7 @@
                         <div class="furniture__sell">
                           <h3 class="furniture__prise">40$</h3>
                           <div class="furniture__wrapper_sell">
-                            <a href="#" class="furniture__button"
-                              >Buy Now</a
-                            >
+                            <a href="#" class="furniture__button">Buy Now</a>
                           </div>
                         </div>
                       </div>
@@ -351,9 +323,7 @@
                       />
                       <div class="furniture__wrapper">
                         <div class="furniture__describe">
-                          <h3 class="furniture__header_small">
-                            White Chair2
-                          </h3>
+                          <h3 class="furniture__header_small">White Chair2</h3>
                           <img
                             src="./img/Frame 41.png"
                             alt="furniture__favorite"
@@ -363,9 +333,7 @@
                         <div class="furniture__sell">
                           <h3 class="furniture__prise">40$</h3>
                           <div class="furniture__wrapper_sell">
-                            <a href="#" class="furniture__button"
-                              >Buy Now</a
-                            >
+                            <a href="#" class="furniture__button">Buy Now</a>
                           </div>
                         </div>
                       </div>
@@ -378,9 +346,7 @@
                       />
                       <div class="furniture__wrapper">
                         <div class="furniture__describe">
-                          <h3 class="furniture__header_small">
-                            White Chair3
-                          </h3>
+                          <h3 class="furniture__header_small">White Chair3</h3>
                           <img
                             src="./img/Frame 41.png"
                             alt="furniture__favorite"
@@ -390,9 +356,7 @@
                         <div class="furniture__sell">
                           <h3 class="furniture__prise">40$</h3>
                           <div class="furniture__wrapper_sell">
-                            <a href="#" class="furniture__button"
-                              >Buy Now</a
-                            >
+                            <a href="#" class="furniture__button">Buy Now</a>
                           </div>
                         </div>
                       </div>
@@ -409,9 +373,7 @@
                       />
                       <div class="furniture__wrapper">
                         <div class="furniture__describe">
-                          <h3 class="furniture__header_small">
-                            White Chair1
-                          </h3>
+                          <h3 class="furniture__header_small">White Chair1</h3>
                           <img
                             src="./img/Frame 41.png"
                             alt="furniture__favorite"
@@ -421,9 +383,7 @@
                         <div class="furniture__sell">
                           <h3 class="furniture__prise">40$</h3>
                           <div class="furniture__wrapper_sell">
-                            <a href="#" class="furniture__button"
-                              >Buy Now</a
-                            >
+                            <a href="#" class="furniture__button">Buy Now</a>
                           </div>
                         </div>
                       </div>
@@ -436,9 +396,7 @@
                       />
                       <div class="furniture__wrapper">
                         <div class="furniture__describe">
-                          <h3 class="furniture__header_small">
-                            White Chair2
-                          </h3>
+                          <h3 class="furniture__header_small">White Chair2</h3>
                           <img
                             src="./img/Frame 41.png"
                             alt="furniture__favorite"
@@ -448,9 +406,7 @@
                         <div class="furniture__sell">
                           <h3 class="furniture__prise">40$</h3>
                           <div class="furniture__wrapper_sell">
-                            <a href="#" class="furniture__button"
-                              >Buy Now</a
-                            >
+                            <a href="#" class="furniture__button">Buy Now</a>
                           </div>
                         </div>
                       </div>
@@ -463,9 +419,7 @@
                       />
                       <div class="furniture__wrapper">
                         <div class="furniture__describe">
-                          <h3 class="furniture__header_small">
-                            White Chair3
-                          </h3>
+                          <h3 class="furniture__header_small">White Chair3</h3>
                           <img
                             src="./img/Frame 41.png"
                             alt="furniture__favorite"
@@ -475,9 +429,7 @@
                         <div class="furniture__sell">
                           <h3 class="furniture__prise">40$</h3>
                           <div class="furniture__wrapper_sell">
-                            <a href="#" class="furniture__button"
-                              >Buy Now</a
-                            >
+                            <a href="#" class="furniture__button">Buy Now</a>
                           </div>
                         </div>
                       </div>
@@ -519,9 +471,8 @@
               <div class="catalog_text">
                 <h2 class="catalog__header">All Furniture</h2>
                 <p class="catalog__paragraph">
-                  All of our furniture uses the best materials and choices
-                  for our customers.All of our furniture uses the best
-                  materials
+                  All of our furniture uses the best materials and choices for
+                  our customers.All of our furniture uses the best materials
                 </p>
               </div>
               <div class="catalog__select">
@@ -533,12 +484,12 @@
                   />
                 </div>
                 <div class="catalog__switch">
-                  <p class="catalog__item">Living Room</p>
-                  <p class="catalog__item">Kitchen</p>
-                  <p class="catalog__item">Dining Room</p>
-                  <p class="catalog__item">Office</p>
-                  <p class="catalog__item">Bed Room</p>
-                  <p class="catalog__item">Halfway</p>
+                  <a href="#" class="catalog__item">Living Room</a>
+                  <a href="#" class="catalog__item">Kitchen</a>
+                  <a href="#" class="catalog__item">Dining Room</a>
+                  <a href="#" class="catalog__item">Office</a>
+                  <a href="#" class="catalog__item">Bed Room</a>
+                  <a href="#" class="catalog__item">Halfway</a>
                 </div>
               </div>
             </div>
@@ -558,17 +509,21 @@
             </div>
             <div class="footer__text">
               <h3 class="footer__header">Take a tour</h3>
-              <p class="footer__paragraph">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Quibusdam consequuntur consequatur consectetur fuga minima!
-              </p>
+              <ul class="footer__list">
+                <li><a class="footer__link" href="#">All your pref</a></li>
+                <li><a class="footer__link" href="#">Content</a></li>
+                <li><a class="footer__link" href="#">Some other content</a></li>
+                <li><a class="footer__link" href="#">Some text</a></li>
+              </ul>
             </div>
             <div class="footer__text">
               <h3 class="footer__header">Our company</h3>
-              <p class="footer__paragraph">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Quibusdam consequuntur consequatur consectetur fuga minima!
-              </p>
+              <ul class="footer__list">
+                <li><a class="footer__link" href="#">All your pref</a></li>
+                <li><a class="footer__link" href="#">Content</a></li>
+                <li><a class="footer__link" href="#">Some other content</a></li>
+                <li><a class="footer__link" href="#">Some text</a></li>
+              </ul>
             </div>
           </div>
         </div>
