--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
               <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div
+              class="collapse navbar-collapse"
+              id="navbarSupportedContent"
+            >
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                   <a class="nav-link" href="#"
@@ -61,11 +64,16 @@
                   >
                     Dropdown
                   </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <div
+                    class="dropdown-menu"
+                    aria-labelledby="navbarDropdown"
+                  >
                     <a class="dropdown-item" href="#">Action</a>
                     <a class="dropdown-item" href="#">Another action</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="#"
+                      >Something else here</a
+                    >
                   </div>
                 </li>
                 <li class="nav-item">
@@ -131,10 +139,13 @@
                 />
               </div>
               <div class="hero__cta">
-                <h1 class="hero__header">We Help You Make Modern Furniture</h1>
+                <h1 class="hero__header">
+                  We Help You Make Modern Furniture
+                </h1>
                 <p class="hero__paragraph">
-                  All of our furniture uses the best materials and choices for
-                  our customers.All of our furniture uses the best materials
+                  All of our furniture uses the best materials and choices
+                  for our customers.All of our furniture uses the best
+                  materials
                 </p>
                 <div class="hero__button-wrapper">
                   <a href="#" class="hero__button"> Explore More</a>
@@ -190,8 +201,9 @@
               <div class="slider__text">
                 <h1 class="slider__header">Our Popular Furniture</h1>
                 <p class="slider__paragraph">
-                  All of our furniture uses the best materials and choices for
-                  our customers.All of our furniture uses the best materials
+                  All of our furniture uses the best materials and choices
+                  for our customers.All of our furniture uses the best
+                  materials
                 </p>
               </div>
             </div>
@@ -227,7 +239,9 @@
                       />
                       <div class="furniture__wrapper">
                         <div class="furniture__describe">
-                          <h3 class="furniture__header_small">White Chair1</h3>
+                          <h3 class="furniture__header_small">
+                            White Chair1
+                          </h3>
                           <img
                             src="./img/Frame 41.png"
                             alt="furniture__favorite"
@@ -237,7 +251,9 @@
                         <div class="furniture__sell">
                           <h3 class="furniture__prise">40$</h3>
                           <div class="furniture__wrapper_sell">
-                            <a href="#" class="furniture__button">Buy Now</a>
+                            <a href="#" class="furniture__button"
+                              >Buy Now</a
+                            >
                           </div>
                         </div>
                       </div>
@@ -250,7 +266,9 @@
                       />
                       <div class="furniture__wrapper">
                         <div class="furniture__describe">
-                          <h3 class="furniture__header_small">White Chair2</h3>
+                          <h3 class="furniture__header_small">
+                            White Chair2
+                          </h3>
                           <img
                             src="./img/Frame 41.png"
                             alt="furniture__favorite"
@@ -260,7 +278,9 @@
                         <div class="furniture__sell">
                           <h3 class="furniture__prise">40$</h3>
                           <div class="furniture__wrapper_sell">
-                            <a href="#" class="furniture__button">Buy Now</a>
+                            <a href="#" class="furniture__button"
+                              >Buy Now</a
+                            >
                           </div>
                         </div>
                       </div>
@@ -273,7 +293,9 @@
                       />
                       <div class="furniture__wrapper">
                         <div class="furniture__describe">
-                          <h3 class="furniture__header_small">White Chair3</h3>
+                          <h3 class="furniture__header_small">
+                            White Chair3
+                          </h3>
                           <img
                             src="./img/Frame 41.png"
                             alt="furniture__favorite"
@@ -283,80 +305,9 @@
                         <div class="furniture__sell">
                           <h3 class="furniture__prise">40$</h3>
                           <div class="furniture__wrapper_sell">
-                            <a href="#" class="furniture__button">Buy Now</a>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <div class="list__wrapper">
-                    <div class="furniture">
-                      <img
-                        src="./img/Rectangle 34.png"
-                        alt="img"
-                        class="furniture__image"
-                      />
-                      <div class="furniture__wrapper">
-                        <div class="furniture__describe">
-                          <h3 class="furniture__header_small">White Chair1</h3>
-                          <img
-                            src="./img/Frame 41.png"
-                            alt="furniture__favorite"
-                            class="furniture__favorite"
-                          />
-                        </div>
-                        <div class="furniture__sell">
-                          <h3 class="furniture__prise">40$</h3>
-                          <div class="furniture__wrapper_sell">
-                            <a href="#" class="furniture__button">Buy Now</a>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="furniture">
-                      <img
-                        src="./img/Rectangle 34.png"
-                        alt="img"
-                        class="furniture__image"
-                      />
-                      <div class="furniture__wrapper">
-                        <div class="furniture__describe">
-                          <h3 class="furniture__header_small">White Chair2</h3>
-                          <img
-                            src="./img/Frame 41.png"
-                            alt="furniture__favorite"
-                            class="furniture__favorite"
-                          />
-                        </div>
-                        <div class="furniture__sell">
-                          <h3 class="furniture__prise">40$</h3>
-                          <div class="furniture__wrapper_sell">
-                            <a href="#" class="furniture__button">Buy Now</a>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="furniture">
-                      <img
-                        src="./img/Rectangle 34.png"
-                        alt="img"
-                        class="furniture__image"
-                      />
-                      <div class="furniture__wrapper">
-                        <div class="furniture__describe">
-                          <h3 class="furniture__header_small">White Chair3</h3>
-                          <img
-                            src="./img/Frame 41.png"
-                            alt="furniture__favorite"
-                            class="furniture__favorite"
-                          />
-                        </div>
-                        <div class="furniture__sell">
-                          <h3 class="furniture__prise">40$</h3>
-                          <div class="furniture__wrapper_sell">
-                            <a href="#" class="furniture__button">Buy Now</a>
+                            <a href="#" class="furniture__button"
+                              >Buy Now</a
+                            >
                           </div>
                         </div>
                       </div>
@@ -373,7 +324,9 @@
                       />
                       <div class="furniture__wrapper">
                         <div class="furniture__describe">
-                          <h3 class="furniture__header_small">White Chair1</h3>
+                          <h3 class="furniture__header_small">
+                            White Chair1
+                          </h3>
                           <img
                             src="./img/Frame 41.png"
                             alt="furniture__favorite"
@@ -383,7 +336,9 @@
                         <div class="furniture__sell">
                           <h3 class="furniture__prise">40$</h3>
                           <div class="furniture__wrapper_sell">
-                            <a href="#" class="furniture__button">Buy Now</a>
+                            <a href="#" class="furniture__button"
+                              >Buy Now</a
+                            >
                           </div>
                         </div>
                       </div>
@@ -396,7 +351,9 @@
                       />
                       <div class="furniture__wrapper">
                         <div class="furniture__describe">
-                          <h3 class="furniture__header_small">White Chair2</h3>
+                          <h3 class="furniture__header_small">
+                            White Chair2
+                          </h3>
                           <img
                             src="./img/Frame 41.png"
                             alt="furniture__favorite"
@@ -406,7 +363,9 @@
                         <div class="furniture__sell">
                           <h3 class="furniture__prise">40$</h3>
                           <div class="furniture__wrapper_sell">
-                            <a href="#" class="furniture__button">Buy Now</a>
+                            <a href="#" class="furniture__button"
+                              >Buy Now</a
+                            >
                           </div>
                         </div>
                       </div>
@@ -419,7 +378,9 @@
                       />
                       <div class="furniture__wrapper">
                         <div class="furniture__describe">
-                          <h3 class="furniture__header_small">White Chair3</h3>
+                          <h3 class="furniture__header_small">
+                            White Chair3
+                          </h3>
                           <img
                             src="./img/Frame 41.png"
                             alt="furniture__favorite"
@@ -429,7 +390,94 @@
                         <div class="furniture__sell">
                           <h3 class="furniture__prise">40$</h3>
                           <div class="furniture__wrapper_sell">
-                            <a href="#" class="furniture__button">Buy Now</a>
+                            <a href="#" class="furniture__button"
+                              >Buy Now</a
+                            >
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="list__wrapper">
+                    <div class="furniture">
+                      <img
+                        src="./img/Rectangle 34.png"
+                        alt="img"
+                        class="furniture__image"
+                      />
+                      <div class="furniture__wrapper">
+                        <div class="furniture__describe">
+                          <h3 class="furniture__header_small">
+                            White Chair1
+                          </h3>
+                          <img
+                            src="./img/Frame 41.png"
+                            alt="furniture__favorite"
+                            class="furniture__favorite"
+                          />
+                        </div>
+                        <div class="furniture__sell">
+                          <h3 class="furniture__prise">40$</h3>
+                          <div class="furniture__wrapper_sell">
+                            <a href="#" class="furniture__button"
+                              >Buy Now</a
+                            >
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="furniture">
+                      <img
+                        src="./img/Rectangle 34.png"
+                        alt="img"
+                        class="furniture__image"
+                      />
+                      <div class="furniture__wrapper">
+                        <div class="furniture__describe">
+                          <h3 class="furniture__header_small">
+                            White Chair2
+                          </h3>
+                          <img
+                            src="./img/Frame 41.png"
+                            alt="furniture__favorite"
+                            class="furniture__favorite"
+                          />
+                        </div>
+                        <div class="furniture__sell">
+                          <h3 class="furniture__prise">40$</h3>
+                          <div class="furniture__wrapper_sell">
+                            <a href="#" class="furniture__button"
+                              >Buy Now</a
+                            >
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="furniture">
+                      <img
+                        src="./img/Rectangle 34.png"
+                        alt="img"
+                        class="furniture__image"
+                      />
+                      <div class="furniture__wrapper">
+                        <div class="furniture__describe">
+                          <h3 class="furniture__header_small">
+                            White Chair3
+                          </h3>
+                          <img
+                            src="./img/Frame 41.png"
+                            alt="furniture__favorite"
+                            class="furniture__favorite"
+                          />
+                        </div>
+                        <div class="furniture__sell">
+                          <h3 class="furniture__prise">40$</h3>
+                          <div class="furniture__wrapper_sell">
+                            <a href="#" class="furniture__button"
+                              >Buy Now</a
+                            >
                           </div>
                         </div>
                       </div>
@@ -471,8 +519,9 @@
               <div class="catalog_text">
                 <h2 class="catalog__header">All Furniture</h2>
                 <p class="catalog__paragraph">
-                  All of our furniture uses the best materials and choices for
-                  our customers.All of our furniture uses the best materials
+                  All of our furniture uses the best materials and choices
+                  for our customers.All of our furniture uses the best
+                  materials
                 </p>
               </div>
               <div class="catalog__select">
@@ -510,22 +559,58 @@
             <div class="footer__text">
               <h3 class="footer__header">Take a tour</h3>
               <ul class="footer__list">
-                <li><a class="footer__link" href="#">All your pref</a></li>
-                <li><a class="footer__link" href="#">Content</a></li>
-                <li><a class="footer__link" href="#">Some other content</a></li>
-                <li><a class="footer__link" href="#">Some text</a></li>
+                <li class="footer__item">
+                  <a class="footer__link" href="#">All your pref</a>
+                </li>
+                <li class="footer__item">
+                  <a class="footer__link" href="#">Content</a>
+                </li>
+                <li class="footer__item">
+                  <a class="footer__link" href="#">Some other content</a>
+                </li>
+                <li class="footer__item">
+                  <a class="footer__link" href="#">Some text</a>
+                </li>
               </ul>
             </div>
             <div class="footer__text">
               <h3 class="footer__header">Our company</h3>
               <ul class="footer__list">
-                <li><a class="footer__link" href="#">All your pref</a></li>
-                <li><a class="footer__link" href="#">Content</a></li>
-                <li><a class="footer__link" href="#">Some other content</a></li>
-                <li><a class="footer__link" href="#">Some text</a></li>
+                <li class="footer__item">
+                  <a class="footer__link" href="#">All your pref</a>
+                </li>
+                <li class="footer__item">
+                  <a class="footer__link" href="#">Content</a>
+                </li>
+                <li class="footer__item">
+                  <a class="footer__link" href="#">Some other content</a>
+                </li>
+                <li class="footer__item">
+                  <a class="footer__link" href="#">Some text</a>
+                </li>
+              </ul>
+            </div>
+            <div class="footer__text">
+              <h3 class="footer__header">Co Working</h3>
+              <ul class="footer__list">
+                <li class="footer__item">
+                  <a class="footer__link" href="#">All your pref</a>
+                </li>
+                <li class="footer__item">
+                  <a class="footer__link" href="#">Content</a>
+                </li>
+                <li class="footer__item">
+                  <a class="footer__link" href="#">Some other content</a>
+                </li>
+                <li class="footer__item">
+                  <a class="footer__link" href="#">Some text</a>
+                </li>
               </ul>
             </div>
           </div>
+        </div>
+        <div class="footer__copyright">
+          <p>Copyright @ 2021. Crafted with love.</p>
         </div>
       </footer>
     </div>
