visual responsib complete

--- a/index.html
+++ b/index.html
@@ -551,10 +551,20 @@
           <div class="footer__wrapper">
             <div class="footer__text">
               <h3 class="footer__header">DudeShape</h3>
-              <p class="footer__paragraph">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Quibusdam consequuntur consequatur consectetur fuga minima!
-              </p>
+              <ul class="footer__list">
+                <li class="footer__item">
+                  <a class="footer__link" href="#">All your pref</a>
+                </li>
+                <li class="footer__item">
+                  <a class="footer__link" href="#">Content</a>
+                </li>
+                <li class="footer__item">
+                  <a class="footer__link" href="#">Some other content</a>
+                </li>
+                <li class="footer__item">
+                  <a class="footer__link" href="#">Some text</a>
+                </li>
+              </ul>
             </div>
             <div class="footer__text">
               <h3 class="footer__header">Take a tour</h3>
